# CarHMI

./: CMakeLists.txt  CarWindow.qml  Cell.qml  MainWindow.qml  MessagesWindow.qml  MusicInfoArea.qml  MusicSource.qml  MusicWindow.qml  NaviWindow.qml  PhoneKeyboard.qml  PhoneWindow.qml  README.md  Range.qml  SettingsWindow.qml  Temperature.qml  VideoWindow.qml  Watch.qml  WeatherCurrently.qml  WeatherFuture.qml  WeatherWindow.qml  main.cpp  main.qml  musicplayer.cpp  musicplayer.h  qml.qrc  untitled.pro
